--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.3",
+    "bootstrap": "^5.0.0-beta3",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
+    "vue-router": "^4.0.0-0",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "^3.1.1",
+    "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "^4.5.13",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
